--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
 
   <!-- Main -->
   <main id="main">
-    <div class="photographer_section"></div>
+    <div class="photographer_section">
+    </div>
   </main>
 
   <!-- JS scripts -->
