image done for the carrousel

--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
   <link href="css/style.css" rel="stylesheet" type="text/css" />
   <meta charset="utf-8">
 
-  <!-- Favicon -->
-  <link rel="icon" type="image/png" href="assets/favicon.png">
-
   <!-- Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=DM+Sans&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,500;0,700;1,700&display=swap"
+    rel="stylesheet">
 
   <title>Fisheye</title>
 </head>
@@ -32,9 +32,8 @@
   </main>
 
   <!-- JS scripts -->
-  <script src="scripts/factories/Photographer.js"></script>
+  <script src="scripts/factories/photographer.js"></script>
   <script src="scripts/pages/index.js"></script>
-  <script src="scripts/pages/photographer.js"></script>
 </body>
 
 </html>
