--- a/photographer.html
+++ b/photographer.html
@@ -5,19 +5,44 @@
   <link href="css/style.css" rel="stylesheet" type="text/css" />
   <meta charset="utf-8">
   <link rel="icon" type="image/png" href="assets/favicon.png">
-  <link href="https://fonts.googleapis.com/css?family=DM+Sans&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,500;0,700;1,700&display=swap"
+    rel="stylesheet">
   <title>Fisheye - photographe </title>
 </head>
 
 <body>
   <header>
-    <img src="assets/images/logo.png" class="logo" />
+    <a href="./index.html">
+      <img src="assets/images/logo.png" class="logo" />
+    </a>
+
   </header>
+
   <main id="main">
-    <div class="photograph-header">
-      <button class="contact_button" onclick="displayModal()">Contactez-moi</button>
+    <div class="likes-price" id="likes-price"></div>
+    <div class="photograph-header" id="photograph-header"></div>
+    <div class="photograph-carrousel" id="photograph-carrousel">
+      <div class="container-filters">
+        <div class="bloc-filters">
+          <p>Trier par :</p>
+          <img id="buttonOpenCloseFilter" src="./assets/icons/Fichier 2.svg" alt="">
+          <ul id="ul-filter">
+            <li class="carrousel-filters">Popularité</li>
+            <!-- <span class="line"></span>
+            <li class="carrousel-filters">Date</li>
+            <span class="line"></span>
+            <li class="carrousel-filters">Titre</li> -->
+          </ul>
+        </div>
+      </div>
+
+      <div class="carrousel" id="carrousel"></div>
     </div>
+
   </main>
+
   <div id="contact_modal">
     <div class="modal">
       <header>
