--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,500;0,700;1,700&display=swap"
     rel="stylesheet">
-
+  <!-- fontawesome  -->
+  <script src="https://kit.fontawesome.com/b1f64f6a17.js" crossorigin="anonymous"></script>
   <title>Fisheye</title>
 </head>
 
