before clean code

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
 
 <head>
 
@@ -22,14 +22,14 @@
 
   <!-- Header -->
   <header>
-    <img src="assets/images/logo.png" class="logo" />
+    <img src="assets/images/logo.png" class="logo" alt="logo fisheye" />
     <h1>Nos photographes</h1>
   </header>
 
   <!-- Main -->
   <main id="main">
-    <div class="photographer_section">
-    </div>
+    <nav class="photographer_section">
+    </nav>
   </main>
 
   <!-- JS scripts -->
